--- a/CodeCrafters/register/register.css
+++ b/CodeCrafters/register/register.css
@@ -87,6 +87,17 @@ body{
     outline: none;
 }
 
+.container option{
+    background-color: rgb(236, 217, 174);
+    border: none;
+    margin: 8px 0;
+    padding: 10px 15px;
+    font-size: 13px;
+    border-radius: 8px;
+    width: 100%;
+    outline: none;
+}
+
 .form-container{
     position: absolute;
     top: 0;
